--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,260 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+  background-color: #1D3461;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header{
+  background-color: #1D3461;
+  height: 50px;
+  display: block;
+  align-items: center;
+  font-weight: 800;
+  color: #ffffff;
+  
+}
+
+.name{
+  margin-left: 20px;
+  
+}
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100wh;
+}
+.cont{
+  display:inline-flexbox;
+  align-items: center;
+  justify-content: center;
+  
+  
+  border-radius: 20px;
+  
+  
+}
+
+.welcomep{
+  font-family: "Playwrite MX";
+  font-size: 25px;
+  font-weight: 600;
+  font-style: normal;
+  text-align: center;
+  color: white;
+}
+
+.buttons{
+ 
+  padding: 20px;
+  
+ 
+  
+  
+}
+
+.signUpButton ,.loginButton{
+  margin: 20px;
+  width: 150px;
+  height: 50px;
+  background-color: #FB3640;
+  border-radius: 10px;
+  color: white;
+  font-weight: 600;
+  font-size: 15px;
+  
+  
+}
+
+.signUpButton:hover,
+.loginButton:hover{
+  background-color: #fe1d28;
+}
+
+h1{
+  text-align: center;
+  color: white;
+  display: block;
+}
+
+.form{
+  color: white;
+  display: block;
+  
+}
+label{
+  display: block;
+  text-align: center;
+  
+}
+
+input{
+  margin-bottom: 20px;
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  padding-left: 10px;
+  display: block;
+  
+}
+
+.formbut{
+  width: 150px;
+  height: 50px;
+  margin-left: 85px;
+  margin-top: 50px;
+  border-radius: 5px;
+  background-color: #FB3640;
+  color: white;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.formbut:hover{
+  background-color: #fe1d28;
+}
+
+
+.mainSign{
+  display: flex;
+  justify-content: center;
+  margin-top: 10vh;
+  
+}
+
+.link{
+  text-align: center;
+  color: white;
+}
+
+.completed{
+  margin-top: 30vh;
+}
+.line {
+ width: 100wh;
+ height: 2px;
+ background-color: white;
+}
+
+.mainHome{
+  margin-top: 13vh;
+  margin-left: 160px;
+  width: 600px;
+  height: 60vh;
+  
+  
+}
+.enterDetails{
+  width: 600px;
+  height: 60vh;
+  background-color:rgba(255, 255, 255, 0.878);
+  border-radius: 20px;
+}
+.Homeform{
+  display: block;
+  margin-left: 80px;
+  padding-top: 50px;
+}
+.Homeform label{
+  display: flex;
+  margin-left: 10px;
+  color: #1D3461;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.Homeform select{
+  margin-bottom: 20px;
+  width: 400px;
+  height: 40px;
+  border-radius: 7px;
+  padding-left: 10px;
+  display: block;
+  background-color:#ffffff;
+  border: 3px Solid #1D3461;
+  color: #1D3461;
+  font-size: 15px;
+  font-weight: 600;
+  
+}
+
+.Homeform input[type="date"] {
+  margin-bottom: 20px;
+  width: 400px;
+  height: 40px;
+  border-radius: 7px;
+  padding-left: 10px;
+  display: block;
+  background-color: #ffffff;
+  border: 3px solid #1D3461; 
+  color: #1D3461;
+  font-size: 18px;
+  font-weight: 700;
+  
+}
+
+.Homeformbut{
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: #FB3640;
+  margin-left: 130px;
+  margin-top: 20px;
+  color: white;
+  font-weight: 600;
+  font-size: 15px;
+
+}
+
+.Homeformbut:hover{
+  background-color: #fe1d28;
+}
+
+.showlists{
+  height: 85vh;
+  width: 600px;
+  background-color:rgba(255, 255, 255, 0.878);
+  border-radius: 20px;
+
+}
+.HomeConatainer{
+  height: 90vh;
+  width: 100wh;
+  
+  display: flex;
+}
+
+.left{
+  margin-left: 58px;
+  width: 700px;
+  height: 90vh;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.right{
+  width: 700px;
+  height: 90vh;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
 }
